Adjust mobile h1 font size and margin

--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@
   }
 
   @media(max-width:768px){
+      h1 { font-size: 1.6em; }   /* 모바일 제목 폰트 조절 */
+      /* 간격도*/
+      h1 { font-size: 1.6em; margin-bottom: 8px; }
     .flex-container { flex-direction: column; }
     .product-side { display: none; }
     .preview-side { width:100%; padding-left:0; }
