--- a/index.html
+++ b/index.html
@@ -550,6 +550,22 @@ mobileSelect.addEventListener("change", e => {
 });
 
 /* ----- 상세 업데이트 ----- */
+/* ----- 수량 입력 UX 개선: 포커스 시 전체 선택 ----- */
+function attachQtySelectAll(){
+  // 왼쪽 리스트 수량 input들
+  document.querySelectorAll(".qty-input").forEach(input => {
+    input.addEventListener("focus", () => input.select());
+    input.addEventListener("click", () => input.select());
+  });
+
+  // 상세 수량 input
+  const detailQty = document.getElementById("detailQty");
+  detailQty.addEventListener("focus", () => detailQty.select());
+  detailQty.addEventListener("click", () => detailQty.select());
+}
+
+attachQtySelectAll();
+  
 function selectProduct(i) {
   selectedIndex = i;
   const p = products[i];
