--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
     
       <!-- ✅ 계좌이체 안내 강조 박스 -->
       <div class="bank-highlight" id="bankHighlight">
-        <div class="bank-name">하나은행 183-910001-24105</div>
-        <div class="bank-amount">입금해야되는 총액: <span id="bankTotalText">0</span>원</div>
-        <div class="bank-note">결제 확인 후 출고 진행됩니다.</div>
+        <div class="bank-name">입금 계좌: 하나은행 183-910001-24105</div>
+        <div class="bank-amount">입금하실 금액은<span id="bankTotalText">0</span>원 입니다.</div>
+        <div class="bank-note">결제 확인 후, 영업일 기준으로 순차 출고됩니다.</div>
       </div>
     
       <label>입금자명</label>
