--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 
   <!-- 배너 -->
   <div class="banner">
-    <img src="https://raw.githubusercontent.com/bini233/order-form-site/main/assets/header.png" alt="Parnas Hotel Collection">
+    <img src="./assets/header.png" alt="Parnas Hotel Collection">
   </div>
 
   <h1>Parnas Hotel Collection Special Offer</h1>
