--- a/index.html
+++ b/index.html
@@ -657,11 +657,7 @@ const products = [
 
   { category:"Towel Line", name:"페이스 타월 세트", price:63200,
     img:"https://raw.githubusercontent.com/bini233/order-form-site/main/assets/Face%20Towel.jpg",
-    desc:"부드러운 페이스 타월 3개 세트." },
-
-  { category:"Gourmet Line", name:"버터 치킨 커리", price:27300,
-    img:"https://raw.githubusercontent.com/bini233/order-form-site/main/assets/Butter%20Curry%20Chicken.jpg",
-    desc:"리치한 버터풍미의 인도식 커리." }
+    desc:"부드러운 페이스 타월 3개 세트." }
 ];
 
 let selectedIndex = 0;
