--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
 <title>Parnas Hotel Collection Special Offer</title>
 
 <style>
+  /* ✅ 상단 안내(판매기간/구매방법/배송/오프라인/문의) 강조 박스 */
+  .info-box{
+    margin: 18px 0 10px;
+    padding: 16px 16px;
+    background: #f7f9fb;
+    border: 1px solid #cfd6dd;
+    border-radius: 10px;
+    color: #2c3e50;
+    line-height: 1.7;
+  }
+  
+  .info-box .info-title{
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  
+  .info-box .info-item{
+    margin: 6px 0;
+    color: #556677;
+  }
+  
+  .info-box .info-item strong{
+    color: #2c3e50;
+    font-weight: 700;
+  }
+  
+  .info-box .info-sub{
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: 1px solid #e4e9ef;
+    color: #556677;
+    font-size: 0.95em;
+  }
+
+
+  
   /* ✅ 계좌이체 안내 강조 박스 */
   /* ✅ 카드결제 안내 박스(은행 박스와 동일 톤) */
   .pay-highlight{
@@ -407,15 +443,24 @@
   <h1>Parnas Hotel Collection Special Offer</h1>
   <h4>파르나스호텔 컬렉션이 현대 임직원분들에게만 특별 할인 혜택을 드립니다!</h4>
 
-  <div class="info-line">
-    <strong>판매 기간</strong> : ~ 2026.12.31<br>
-    <strong>구매 방법</strong> : 계좌이체 또는 카드 결제 링크<br>
-    <strong>배송 안내</strong> : 결제 확인 후 출고 (주말·공휴일 제외)<br>
-    <strong>오프라인 구매</strong> : 그랜드 인터컨티넨탈 서울 파르나스 1층<br>
-    &nbsp;&nbsp;파르나스호텔 컬렉션 부티크에서 구매 가능합니다.<br>
-    <span class="note">※ 사원증 또는 명함 확인 필수</span><br>
-    <strong>문의</strong> : <a href="mailto:newbiz@parnas.co.kr">newbiz@parnas.co.kr</a>
+  <div class="info-box">
+    <div class="info-title">안내</div>
+  
+    <div class="info-item"><strong>판매 기간</strong> : ~ 2026.12.31</div>
+    <div class="info-item"><strong>구매 방법</strong> : 계좌이체 또는 카드 결제 링크</div>
+  
+    <div class="info-item"><strong>배송 안내</strong> :</div>
+    <div class="info-item">■ 상품 배송은 영업일 기준 순차적으로 발송됩니다. (주말, 공휴일 제외)</div>
+    <div class="info-item">■ 기상악화 및 공휴일, 설/추석 연휴 등의 사유로 배송이 지연될 수 있습니다.</div>
+  
+    <div class="info-sub">
+      <div class="info-item"><strong>오프라인 구매</strong> : 그랜드 인터컨티넨탈 서울 파르나스 1층 파르나스호텔 컬렉션 부티크</div>
+      <div class="info-item">※ 오프라인 구매 시에만 사원증 또는 명함 확인이 필요합니다.</div>
+    </div>
+  
+    <div class="info-item"><strong>문의</strong> : <a href="mailto:newbiz@parnas.co.kr">newbiz@parnas.co.kr</a></div>
   </div>
+
 
   <form action="https://formspree.io/f/xyzanddw" method="POST" onsubmit="return validateForm();">
 
@@ -424,6 +469,9 @@
 
     <label>주문자 이름</label>
     <input type="text" name="주문자 이름" placeholder="예시: 홍길동" required>
+
+    <label>회사 이메일 주소</label>
+    <input type="email" name="회사 이메일 주소" placeholder="임직원 여부 확인용입니다. 예시: honggildong@company.com" required>
 
     <!-- 2. 상품 -->
     <h2>2. 구매 상품 및 수량</h2>
