--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style>
   /* ✅ 상단 안내(판매기간/구매방법/배송/오프라인/문의) 강조 박스 */
   .info-box{
+    text-align: center;
     margin: 18px 0 10px;
     padding: 16px 16px;
     background: #f7f9fb;
@@ -444,14 +445,13 @@
   <h4>파르나스호텔 컬렉션이 현대 임직원분들에게만 특별 할인 혜택을 드립니다!</h4>
 
   <div class="info-box">
-    <div class="info-title">안내</div>
   
     <div class="info-item"><strong>판매 기간</strong> : ~ 2026.12.31</div>
     <div class="info-item"><strong>구매 방법</strong> : 계좌이체 또는 카드 결제 링크</div>
   
-    <div class="info-item"><strong>배송 안내</strong> :</div>
-    <div class="info-item">■ 상품 배송은 영업일 기준 순차적으로 발송됩니다. (주말, 공휴일 제외)</div>
-    <div class="info-item">■ 기상악화 및 공휴일, 설/추석 연휴 등의 사유로 배송이 지연될 수 있습니다.</div>
+    <div class="info-item"><strong>배송 안내</strong></div>
+    <div class="info-item">✓ 상품 배송은 영업일 기준 순차적으로 발송됩니다. (주말, 공휴일 제외)</div>
+    <div class="info-item">✓ 기상악화 및 공휴일, 설/추석 연휴 등의 사유로 배송이 지연될 수 있습니다.</div>
   
     <div class="info-sub">
       <div class="info-item"><strong>오프라인 구매</strong> : 그랜드 인터컨티넨탈 서울 파르나스 1층 파르나스호텔 컬렉션 부티크</div>
