--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     text-align: center;
     margin: 18px 0 10px;
     padding: 16px 16px;
-    background: #f7f9fb;
+    background: #ffffff;
     border: 1px solid #cfd6dd;
     border-radius: 10px;
     color: #2c3e50;
