--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     <input type="text" name="주문자 이름" placeholder="예시: 홍길동" required>
 
     <label>회사 이메일 주소</label>
-    <input type="email" name="회사 이메일 주소" placeholder="임직원 여부 확인용입니다. 예시: honggildong@company.com" required>
+    <input type="text" name="회사 이메일 주소" placeholder="임직원 여부 확인용입니다. 예시: honggildong@company.com" required>
 
     <!-- 2. 상품 -->
     <h2>2. 구매 상품 및 수량</h2>
