--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 /* ----- 상품 데이터 ----- */
 const products = [
   { category:"Scent Line", name:"Mossy Wood 디퓨저", price:66500,
-    img:"https://raw.githubusercontent.com/bini233/order-form-site/main/assets/Mossy%20Wood%20Diffuser.jpg",
+    img: "./assets/Mossy_Wood_Diffuser.jpg"
     desc:"짙은 이끼와 우디한 향의 시그니처 디퓨저입니다." },
 
   { category:"Scent Line", name:"Mossy Wood 캔들", price:65100,
