--- a/index.html
+++ b/index.html
@@ -628,83 +628,83 @@
 /* ----- 상품 데이터 ----- */
 const products = [
   { category:"Scent Line", name:"Mossy Wood 디퓨저", price:66500,
-    img: "./assets/Mossy_Wood_Diffuser.jpg",
+    img: "./assets/Mossy_Wood_Diffuser.png",
     desc:"짙은 이끼와 우디한 향의 시그니처 디퓨저입니다." },
 
   { category:"Scent Line", name:"Mossy Wood 캔들", price:65100,
-    img: "./assets/Mossy_Wood_Candle.jpg",
+    img: "./assets/Mossy_Wood_Candle.png",
     desc:"불을 밝히면 은은한 모스향이 공간을 채웁니다." },
 
   { category:"Scent Line", name:"Mossy Wood 룸스프레이", price:61600,
-    img: "./assets/Mossy_Wood_Roomspray.jpg",
+    img: "./assets/Mossy_Wood_Roomspray.png",
     desc:"뿌리기만 하면 호텔처럼 정돈된 향을 느낄 수 있습니다." },
 
   { category:"Scent Line", name:"Mint Forest 디퓨저", price:66500,
-    img: "./assets/Mint_Forest_Diffuser.jpg",
+    img: "./assets/Mint_Forest_Diffuser.png",
     desc:"상쾌한 민트와 숲 향의 조화." },
 
   { category:"Scent Line", name:"Mint Forest 캔들", price:65100,
-    img: "./assets/Mint_Forest_Candle.jpg",
+    img: "./assets/Mint_Forest_Candle.png",
     desc:"초록빛 숲 향이 은은하게 퍼지는 캔들." },
 
   { category:"Scent Line", name:"Mint Forest 룸스프레이", price:61600,
-    img: "./assets/Mint_Forest_Roomspray.jpg",
+    img: "./assets/Mint_Forest_Roomspray.png",
     desc:"빠르게 분위기를 바꾸는 산뜻한 룸스프레이." },
 
   { category:"Scent Line", name:"White Bloom 디퓨저", price:66500,
-    img: "./assets/White_Bloom_Diffuser.jpg",
+    img: "./assets/White_Bloom_Diffuser.png",
     desc:"화이트 플로럴 향이 은은하게 머무는 디퓨저." },
 
   { category:"Scent Line", name:"White Bloom 캔들", price:65100,
-    img: "./assets/White_Bloom_Candle.jpg",
+    img: "./assets/White_Bloom_Candle.png",
     desc:"잔잔한 꽃향이 오래 지속되는 캔들." },
 
   { category:"Scent Line", name:"White Bloom 룸스프레이", price:61600,
-    img: "./assets/White_Bloom_Roomspray.jpg",
+    img: "./assets/White_Bloom_Roomspray.png",
     desc:"부드러운 플로럴향 룸스프레이." },
 
   { category:"Bedding Line", name:"구스다운 킹 이불세트", price:1050000,
-    img: "./assets/Duvet_K.jpg",
+    img: "./assets/Duvet_K.png",
     desc:"풍성한 볼륨감의 구스다운 킹 이불세트." },
 
   { category:"Bedding Line", name:"구스다운 퀸 이불세트", price:1008000,
-    img: "./assets/Duvet_Q.jpg",
+    img: "./assets/Duvet_Q.png",
     desc:"포근하게 감싸주는 구스다운 퀸 이불세트." },
 
   { category:"Bedding Line", name:"구스다운 싱글 이불세트", price:840000,
-    img: "./assets/Duvet_S.jpg",
+    img: "./assets/Duvet_S.png",
     desc:"부드러운 싱글 사이즈 구스다운 이불." },
 
   { category:"Bedding Line", name:"베드시트 킹", price:189000,
-    img: "./assets/Bed_Sheet_K.jpg",
+    img: "./assets/Bed_Sheet_K.png",
     desc:"부드러운 촉감의 킹 사이즈 베드시트." },
 
   { category:"Bedding Line", name:"베드시트 퀸", price:175000,
-    img: "./assets/Bed_Sheet_Q.jpg",,
+    img: "./assets/Bed_Sheet_Q.png",,
     desc:"산뜻한 촉감의 퀸 사이즈 베드시트." },
 
   { category:"Bedding Line", name:"베드시트 싱글", price:147000,
-    img: "./assets/Bed_Sheet_S.jpg",
+    img: "./assets/Bed_Sheet_S.png",
     desc:"깔끔한 싱글 사이즈 베드시트." },
 
   { category:"Bedding Line", name:"구스다운 프리미엄 베개세트", price:368000,
-    img: "./assets/Pillow_Premium.jpg",
+    img: "./assets/Pillow_Premium.png",
     desc:"프리미엄 볼륨의 구스다운 베개 세트." },
 
   { category:"Bedding Line", name:"구스다운 킹 베개세트", price:316000,
-    img: "./assets/Pillow_King.jpg",
+    img: "./assets/Pillow_King.png",
     desc:"넉넉한 킹 사이즈 구스다운 베개." },
 
   { category:"Towel Line", name:"배스로브", price:129500,
-    img: "./assets/Bathrobe.jpg",
+    img: "./assets/Bathrobe.png",
     desc:"호텔 스타일의 포근한 배스로브." },
 
   { category:"Towel Line", name:"배스 타월 세트", price:80500,
-    img: "./assets/Bathtowel.jpg",
+    img: "./assets/Bathtowel.png",
     desc:"흡수력 좋은 배스 타월 2개 세트." },
 
   { category:"Towel Line", name:"페이스 타월 세트", price:63200,
-    img: "./assets/FaceTowel.jpg",
+    img: "./assets/FaceTowel.png",
     desc:"부드러운 페이스 타월 3개 세트." }
 ];
 
