--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ const products = [
     desc:"부드러운 촉감의 킹 사이즈 베드시트." },
 
   { category:"Bedding Line", name:"베드시트 퀸", price:175000,
-    img: "./assets/Bed_Sheet_Q.png",,
+    img: "./assets/Bed_Sheet_Q.png",
     desc:"산뜻한 촉감의 퀸 사이즈 베드시트." },
 
   { category:"Bedding Line", name:"베드시트 싱글", price:147000,
