--- a/index.html
+++ b/index.html
@@ -298,14 +298,15 @@
     margin-bottom: 15px;
   }
 
-  .detail-img {
+  .detail-img{
     width: 100%;
-    height: auto;
-    object-fit: contain;
-    border-radius: 6px;
+    height: 360px;
+    object-fit: cover;       /* 프레임 꽉 채움 */
     background: #fafafa;
-    margin-bottom: 15px;
+    border-radius: 6px;
+    display: block;
   }
+
 
   .detail-desc {
     background: #fafafa;
