--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ const products = [
     `
   },
 
-  { category:"Bedding Line", name:"구스다운 킹 이불세트", price:1050000,
+  { category:"Bedding Line", name:"킹사이즈 구스다운 이불 세트", price:1050000,
     img: "./assets/Duvet_K.png",
     desc:"풍성한 볼륨감의 구스다운 킹 이불세트." },
 
@@ -800,9 +800,23 @@ const products = [
     img: "./assets/Bed_Sheet_S.png",
     desc:"깔끔한 싱글 사이즈 베드시트." },
 
-  { category:"Bedding Line", name:"구스다운 프리미엄 베개세트", price:368000,
+  { category:"Bedding Line", name:"프리미엄 구스다운 베개 세트", price:391000,
     img: "./assets/Pillow_Premium.png",
-    desc:"프리미엄 볼륨의 구스다운 베개 세트." },
+    desc: `
+    <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
+    <div class="desc-sub">머무는 순간의 편안함을 일상으로 옮겨왔습니다. 파르나스호텔의 객실 기준을 준용하되, 그레이 파이핑 디테일과 히든 지퍼를 적용해 가정에서의 사용과 관리가 한층 더 편리하도록 리뉴얼했습니다. </div>
+    
+    <div class="desc-section">상품 구성</div>
+    <ul class="desc-list">
+      <li>프리미엄 베개 세트: 50x90cm, 1,300g</li>
+      <li>구스다운 베개 1개: 폴란드산 프리미엄 구스(솜털 50%, 깃털 50%), 이중 다운프루프</li>
+      <li>베개 커버 1개: 100수 500T, 순면 사틴 원단</li>
+      <li>패브릭 패키지 2개</li>
+    </ul>
+    
+    <div class="desc-footnote">* 호텔 자수가 새겨진 보관용 패브릭 패키지에 담겨 제공됩니다.</div>
+    `
+  },
 
   { category:"Bedding Line", name:"구스다운 킹 베개세트", price:316000,
     img: "./assets/Pillow_King.png",
