--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
       <div class="preview-side">
         <div class="detail-title" id="detailTitle">상품을 선택해주세요</div>
 
-        <img id="detailImg" class="detail-img" src="https://via.placeholder.com/600x240?text=상품이미지" alt="상품 이미지">
+        <img id="detailImg" class="detail-img" src="./assets/placeholder.png" alt="상품 이미지">
 
         <div class="detail-desc" id="detailDesc">좌측 또는 드롭다운에서 상품을 선택해주세요.</div>
 
