--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@
   </div>
 
   <div class="info-box">
-  
+    
+    <div class="info-item"><strong>Parnas Hotel Collection Special Offer</strong></div>
     <div class="info-item"><strong>판매 기간</strong> : ~ 2026.12.31</div>
     <div class="info-item"><strong>구매 방법</strong> : 계좌이체 또는 카드 결제 링크</div>
   
