--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@
     <div class="info-item">✓ 기상악화 및 공휴일, 설/추석 연휴 등의 사유로 배송이 지연될 수 있습니다.</div>
   
     <div class="info-sub">
-      <div class="info-item"><strong>오프라인 구매</strong> : 그랜드 인터컨티넨탈 서울 파르나스 1층 파르나스호텔 컬렉션 부티크</div>
+      <div class="info-item"><strong>오프라인 구매</strong></div>
+      <div class="info-item">그랜드 인터컨티넨탈 서울 파르나스 1층 파르나스호텔 컬렉션 부티크에서 구매 가능합니다.</div>
       <div class="info-item">※ 오프라인 구매 시에만 사원증 또는 명함 확인이 필요합니다.</div>
     </div>
   
