--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
         <div class="pay-note">결제 확인 후, 영업일 기준으로 순차 출고됩니다.</div>
       </div>
     
-      <label class="required">결제 링크 받을 번호</label>
+      <label class="required">결제 링크 받으실 전화번호</label>
       <input type="text" name="카드결제 연락처" class="phone-input" placeholder="숫자만 입력" required>
     </div>
 
