--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     line-height: 1.7;
   }
   
+  .info-box .info-head{
+    font-size: 1.1em;   /* 더 키우고 싶으면 1.15~1.2 */
+    margin-bottom: 10px;
+  }
+
   .info-box .info-title{
     font-weight: 700;
     margin-bottom: 10px;
@@ -497,10 +502,19 @@
   </div>
 
   <div class="info-box">
-    
-    <div class="info-item"><strong>Parnas Hotel Collection Special Offer</strong></div>
+  
+    <div class="info-item info-head"><strong>Parnas Hotel Collection 
+      Special Offer</strong></div>
+  
+    <div class="info-item"><strong>문의</strong> : <a href="mailto:newbiz@parnas.co.kr">newbiz@parnas.co.kr</a></div>
+  
     <div class="info-item"><strong>판매 기간</strong> : ~ 2026.12.31</div>
-    <div class="info-item"><strong>구매 방법</strong> : 계좌이체 또는 카드 결제 링크</div>
+  
+    <div class="info-item"><strong>온라인 구매 방법</strong></div>
+    <div class="info-item">아래 주문서를 작성 후 제출해주세요.</div>
+    <div class="info-item"><strong>결제 방법</strong> : 계좌이체 또는 카드 결제 링크</div>
+    <div class="info-item">① 계좌이체 선택 시, 안내 계좌로 입금 확인 후 순차 출고됩니다.</div>
+    <div class="info-item">② 카드결제 선택 시, 입력하신 전화번호로 결제 링크를 발송드립니다.</div>
   
     <div class="info-item"><strong>배송 안내</strong></div>
     <div class="info-item">✓ 상품 배송은 영업일 기준 순차적으로 발송됩니다. (주말, 공휴일 제외)</div>
@@ -512,8 +526,8 @@
       <div class="info-item">※ 오프라인 구매 시에만 사원증 또는 명함 확인이 필요합니다.</div>
     </div>
   
-    <div class="info-item"><strong>문의</strong> : <a href="mailto:newbiz@parnas.co.kr">newbiz@parnas.co.kr</a></div>
   </div>
+
 
 
   <form action="https://formspree.io/f/xyzanddw" method="POST" onsubmit="return validateForm();">
