--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
   <!-- 배너 -->
   <div class="banner">
-    <img src="./assets/header.png" alt="Parnas Hotel Collection">
+    <img src="./assets/header_re.png" alt="Parnas Hotel Collection">
   </div>
 
   <div class="info-box">
