--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 <title>Parnas Hotel Collection Special Offer</title>
 
 <style>
+  /* 기본(PC)도 비율 고정 원하면 여기서 적용 */
+  .detail-img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+    display: block;
+  }
+
+  /* ✅ 모바일에서만: 가로형 비율로 고정 + 높이 자동 */
+  @media(max-width:768px){
+    .detail-img{
+      height: auto;              /* 400px 고정 해제 */
+      aspect-ratio: 16 / 9;      /* 가로형 고정 (원하면 4/3, 3/2로 변경) */
+      object-fit: contain;       /* 크롭 싫으면 contain(전체 보이게) */
+      background: #fafafa;       /* contain일 때 빈 공간 자연스럽게 */
+    }
+  }
+  
   /* ✅ 필수 표시 별표 */
   label.required::after{
     content: " *";
@@ -73,7 +92,7 @@
   }
   
   .info-box .info-head{
-    font-size: 2.5em;   /* 더 키우고 싶으면 1.15~1.2 */
+    font-size: 1.5em;   /* 더 키우고 싶으면 1.15~1.2 */
     margin-bottom: 10px;
   }
 
@@ -357,14 +376,6 @@
     margin-bottom: 15px;
   }
 
-  .detail-img{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;       /* 프레임 꽉 채움 */
-    background: #fafafa;
-    border-radius: 6px;
-    display: block;
-  }
 
 
   .detail-desc {
@@ -514,8 +525,8 @@
       <div class="info-item"><strong>온라인 구매</strong></div>
       <div class="info-item">아래 주문서를 작성 후 제출해주세요.</div>
       <div class="info-item"><strong>결제 방법</strong> : 계좌이체 또는 카드 결제 링크</div>
-      <div class="info-item">① 계좌이체 선택 시, 안내 계좌로 입금 확인 후 순차 출고됩니다.</div>
-      <div class="info-item">② 카드결제 선택 시, 입력하신 전화번호로 결제 링크를 발송드립니다.</div>
+      <div class="info-item">① 계좌이체: 입금 확인 후 순차 출고됩니다.</div>
+      <div class="info-item">② 카드결제: 입력하신 전화번호로 결제 링크를 발송드립니다.</div>
     
       <div class="info-item"><strong>배송 안내</strong></div>
       <div class="info-item">✓ 상품 배송은 영업일 기준 순차적으로 발송됩니다. (주말, 공휴일 제외)</div>
