--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
   .category-title {
     margin-top: 20px;
-    font-weight: 600;
+    font-weight: 700;
     padding-bottom: 5px;
     border-bottom: 1px solid #ddd;
     color: #222;
@@ -510,7 +510,7 @@
 
   <!-- 배너 -->
   <div class="banner">
-    <img src="./assets/header_re.png" alt="Parnas Hotel Collection">
+    <img src="./assets/header_re2.png" alt="Parnas Hotel Collection">
   </div>
 
   <div class="info-box">
@@ -718,7 +718,7 @@
 <script>
 /* ----- 상품 데이터 ----- */
 const products = [
-  { category:"Scent Line", name:"Mossy Wood 디퓨저", price:76000,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"Mossy Wood 디퓨저", price:76000,
     img: "./assets/Mossy_Wood_Diffuser.png",
     desc: `
     <div class="desc-title">향기로 전하는 품격, Mossy Wood</div>
@@ -735,7 +735,7 @@ const products = [
     `
   },
       
-  { category:"Scent Line", name:"Mossy Wood 캔들", price:74400,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"Mossy Wood 캔들", price:74400,
     img: "./assets/Mossy_Wood_Candle.png",
     desc: `
     <div class="desc-title">향기로 전하는 품격, Mossy Wood</div>
@@ -750,7 +750,7 @@ const products = [
     `
   },
 
-  { category:"Scent Line", name:"Mossy Wood 룸 스프레이", price:70400,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"Mossy Wood 룸 스프레이", price:70400,
     img: "./assets/Mossy_Wood_Roomspray.png",
     desc: `
     <div class="desc-title">향기로 전하는 품격, Mossy Wood</div>
@@ -765,7 +765,7 @@ const products = [
     `
   },
 
-  { category:"Scent Line", name:"Mint Forest 디퓨저", price:76000,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"Mint Forest 디퓨저", price:76000,
     img: "./assets/Mint_Forest_Diffuser.png",
     desc: `
     <div class="desc-title">공간을 감싸는 고요한 싱그러움, Mint Forest</div>
@@ -782,7 +782,7 @@ const products = [
     `
   },
 
-  { category:"Scent Line", name:"Mint Forest 캔들", price:74400,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"Mint Forest 캔들", price:74400,
     img: "./assets/Mint_Forest_Candle.png",
     desc: `
     <div class="desc-title">공간을 감싸는 고요한 싱그러움, Mint Forest</div>
@@ -797,7 +797,7 @@ const products = [
     `
   },
 
-  { category:"Scent Line", name:"Mint Forest 룸 스프레이", price:70400,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"Mint Forest 룸 스프레이", price:70400,
     img: "./assets/Mint_Forest_Roomspray.png",
     desc: `
     <div class="desc-title">공간을 감싸는 고요한 싱그러움, Mint Forest</div>
@@ -812,7 +812,7 @@ const products = [
     `
   },
 
-  { category:"Scent Line", name:"White Bloom 디퓨저", price:76000,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"White Bloom 디퓨저", price:76000,
     img: "./assets/White_Bloom_Diffuser.png",
     desc: `
     <div class="desc-title">고요함 속에서 피어나는 깊은 평온, White Bloom</div>
@@ -829,7 +829,7 @@ const products = [
     `
   },
 
-  { category:"Scent Line", name:"White Bloom 캔들", price:74400,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"White Bloom 캔들", price:74400,
     img: "./assets/White_Bloom_Candle.png",
     desc: `
     <div class="desc-title">고요함 속에서 피어나는 깊은 평온, White Bloom</div>
@@ -844,7 +844,7 @@ const products = [
     `
   },
 
-  { category:"Scent Line", name:"White Bloom 룸 스프레이", price:70400,
+  { category:"Scent Line (정가 대비 20% 할인)", name:"White Bloom 룸 스프레이", price:70400,
     img: "./assets/White_Bloom_Roomspray.png",
     desc: `
     <div class="desc-title">고요함 속에서 피어나는 깊은 평온, White Bloom</div>
@@ -859,7 +859,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"킹사이즈 구스다운 이불 세트", price:1487500,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"킹사이즈 구스다운 이불 세트", price:1487500,
     img: "./assets/Duvet_K.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -877,7 +877,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"퀸사이즈 구스다운 이불 세트", price:1428000,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"퀸사이즈 구스다운 이불 세트", price:1428000,
     img: "./assets/Duvet_Q.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -895,7 +895,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"싱글사이즈 구스다운 이불 세트", price:1190000,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"싱글사이즈 구스다운 이불 세트", price:1190000,
     img: "./assets/Duvet_S.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -913,7 +913,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"프리미엄 구스다운 베개 세트", price:391000,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"프리미엄 구스다운 베개 세트", price:391000,
     img: "./assets/Pillow_Premium.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -931,7 +931,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"킹사이즈 구스다운 베개 세트", price:335750,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"킹사이즈 구스다운 베개 세트", price:335750,
     img: "./assets/Pillow_King.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -950,7 +950,7 @@ const products = [
   },
 
 
-  { category:"Lifestyle Line", name:"킹사이즈 베드 시트", price:229500,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"킹사이즈 베드 시트", price:229500,
     img: "./assets/Bed_Sheet_K.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -967,7 +967,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"퀸사이즈 베드 시트", price:212500,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"퀸사이즈 베드 시트", price:212500,
     img: "./assets/Bed_Sheet_Q.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -984,7 +984,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"싱글사이즈 베드 시트", price:178500,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"싱글사이즈 베드 시트", price:178500,
     img: "./assets/Bed_Sheet_S.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -1002,7 +1002,7 @@ const products = [
   },
 
 
-  { category:"Lifestyle Line", name:"배스로브", price:157250,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"배스로브", price:157250,
     img: "./assets/Bathrobe.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -1020,7 +1020,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"배스 타월 2개입 세트", price:97750,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"배스 타월 2개입 세트", price:97750,
     img: "./assets/Bathtowel.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
@@ -1038,7 +1038,7 @@ const products = [
     `
   },
 
-  { category:"Lifestyle Line", name:"페이스 타월 3개입 세트", price:67150,
+  { category:"Lifestyle Line (정가 대비 15% 할인)", name:"페이스 타월 3개입 세트", price:67150,
     img: "./assets/FaceTowel.png",
     desc: `
     <div class="desc-title">일상을 빛내는 감도 높은 품격</div>
